# unitree_g1_right.arm_dex3_control

./: .gitignore  APRILTAG_OFFSET_COMPENSATION_ANALYSIS.md  BUILD_NEW_MACHINE.md  ELEVATOR_BUTTON_PLAN.md  ELEVATOR_BUTTON_TEST_GUIDE.md  README-botbrain-integration.md  README-camera-calibration.md  README-elevator-vision.md  README-fingertip-tag-calibration.md  README-handeye-flange-calibration.md  README.md  UPLOAD_CHECKLIST.md  calibration_data.md  camera-calibration.md  fingertip-tag-calibration.md  handeye-flange-calibration-data.md  run_perception.sh  按压原点终端数据.md  按压问题.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-right-arm-only-planner/: 01-CONTEXT.md  01-RESEARCH.md
.planning/phases/08-adaptive-orientation/: 08-UAT.md
.planning/phases/09-apriltag-reach/: 09-01-PLAN.md  09-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.windsurf/get-shit-done/workflows/: complete-milestone.md  discuss-phase.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  new-milestone.md  new-project.md  plan-phase.md  research-phase.md  resume-project.md  secure-phase.md  sketch.md  transition.md  ui-phase.md  ui-review.md  update.md  validate-phase.md  verify-work.md
.windsurf/get-shit-done/workflows/discuss-phase/modes/: advisor.md
.windsurf/gsd-local-patches/: backup-meta.json
.windsurf/gsd-local-patches/hooks/: gsd-phase-boundary.sh  gsd-session-state.sh  gsd-validate-commit.sh
.windsurf/skills/lz-knowledge/: INSTALL.md  SKILL.md  discussion.md  execution.md  install-lz.ps1  install-lz.sh  knowledge-doc.md  lz-knowledge.skill  readproject.md  summary.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bboxes_ex_msgs/share/bboxes_ex_msgs/: local_setup.sh  package.ps1  package.sh
install/bboxes_ex_msgs/share/bboxes_ex_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  bboxes_ex_msgsConfig.cmake  (+5 more)
install/fcl/share/fcl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/trac_ik/share/trac_ik/: package.sh
install/trac_ik_kinematics_plugin/share/trac_ik_kinematics_plugin/: package.bash  package.zsh
install/trac_ik_lib/share/trac_ik_lib/: local_setup.sh  package.sh
install/unitree_g1_dex3_stack/lib/unitree_g1_dex3_stack/: detection_to_goal_node  dex3_controller  ik_fcl_ompl_planner  joint_state_publisher  joint_trajectory_executor  project_to_3d_node  right_hand_pressure_monitor  ultralytics_detector.py  visual_detection_tester  visual_detection_yolo_tester
install/unitree_g1_dex3_stack/share/unitree_g1_dex3_stack/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bboxes_ex_msgs/: CMakeLists.txt
src/unitree_g1_dex3_stack-main/: CMakeLists.txt  README.md  package.xml
src/unitree_g1_dex3_stack-main/config/: apriltag.yaml  v4l2_apriltag_trigger.yaml
src/unitree_g1_dex3_stack-main/launch/: apriltag.launch.py  apriltag_reach.launch.py  perception.launch.py  planner.launch.py  robot.launch.py
src/unitree_g1_dex3_stack-main/scripts/: adaptive_orientation_ab.py  apriltag_detector_node.py  apriltag_goal_bridge.py  keyboard_trigger_node.py  tcp_torso_pose.py  ultralytics_detector.py  v4l2_apriltag_trigger.py
src/unitree_g1_dex3_stack-main/src/: ik_fcl_ompl_planner.cpp  joint_trajectory_executor.cpp  project_to_3d_node.cpp  visual_detection_yolo_tester.cpp
tools/: robot_camera_live.py  robot_camera_reset.sh  robot_snapshot.sh
unitree_container/: Dockerfile  README.md  build.sh  container_command.sh  container_shell.sh  entrypoint.sh  right-arm-mode  run.sh  usual command.txt
unitree_container/python_shims/utils/: pinocchio_compat.py
unitree_dex3/detect_img/live/: index.html
unitree_dex3/elevator_vision/: README.md
unitree_dex3/elevator_vision/config/: detection_params.yaml
unitree_dex3/elevator_vision/scripts/: button_detector_node.py  calibration_collector_node.py  check_camera_intrinsics.py
unitree_dex3/elevator_vision/scripts/calibration/: calibration_data.json  collect_calibration_data.py  compute_transform.py  compute_transform_improved.py  generate_transform_from_urdf.py
unitree_dex3/elevator_vision/scripts/transforms/: camera_to_robot.npy
unitree_dex3/elevator_vision/transforms/: camera_to_robot.npy  camera_to_robot_old.npy
unitree_dex3/src/unitree_g1_dex3_stack-main/: CMakeLists.txt
unitree_dex3/src/unitree_g1_dex3_stack-main/config/: apriltag_button_close.yaml  apriltag_button_down.yaml  apriltag_button_number1.yaml  apriltag_button_number5.yaml  apriltag_button_number6.yaml  apriltag_button_open.yaml  apriltag_button_press.yaml  apriltag_button_up.yaml  v4l2_apriltag_trigger.yaml
unitree_dex3/src/unitree_g1_dex3_stack-main/launch/: apriltag_button_open.launch.py  apriltag_button_press.launch.py  apriltag_button_up.launch.py  elevator_button_press.launch.py
unitree_dex3/src/unitree_g1_dex3_stack-main/scripts/: apriltag_button_press_node.py  button_detector_node.py  v4l2_apriltag_trigger.py
unitree_dex3_cpp/: CMakeLists.txt  README.md  dex3_right_pressure_design_Version2.md  pyproject.toml
unitree_dex3_cpp/example/: config.py  control_dex3_right_grasp.py  control_dex3_right_grasp_norelease.py  control_dex3_right_setpoint.py  debug_dex3_right.py
unitree_dex3_cpp/src/: debug_dex3.cpp  py_binding.cpp  unitree_controller.cpp  unitree_controller.hpp
xr_teleoperate/: GEMINI.md
xr_teleoperate/teleop/: free_arm_demo.py  point_control_demo.py  read_dual_arm_joints.py  read_right_arm_joints.py
xr_teleoperate/teleop/robot_control/: robot_arm.py
xr_teleoperate/teleop/teleimager/: cam_config_server.yaml  run.sh
(+209 files in other folders)
